chore: simplify null checks and remove unused methods in video processing classes